--- a/Lecture09-Pandas-Data-Manipulation.ipynb
+++ b/Lecture09-Pandas-Data-Manipulation.ipynb
@@ -174,7 +174,9 @@
     "# read in different parts of data\n",
     "# please change your PATH to `'/srv/data/my_shared_data_folder/ba505-data/concat_1.csv'`\n",
     "df1 = pd.read_csv('./data/concat_1.csv')\n",
+    "# please change your PATH to `'/srv/data/my_shared_data_folder/ba505-data/concat_2.csv'`\n",
     "df2 = pd.read_csv('./data/concat_2.csv')\n",
+    "# please change your PATH to `'/srv/data/my_shared_data_folder/ba505-data/concat_3.csv'`\n",
     "df3 = pd.read_csv('./data/concat_3.csv')\n",
     "\n",
     "df1"
@@ -2145,6 +2147,7 @@
    "source": [
     "# read-in different sets\n",
     "# please change your PATH to `'/srv/data/my_shared_data_folder/ba505-data/DATA'`\n",
+    "# change `DATA` to different file names below\n",
     "person=pd.read_csv('./data/survey_person.csv')\n",
     "site=pd.read_csv('./data/survey_site.csv')\n",
     "survey=pd.read_csv('./data/survey_survey.csv')\n",
